--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
     <meta name="robots" content="noindex, nofollow">
 
     <title>Weather</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons-wind.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css">
 </head>
 <body>
+    <i class="wi wi-day-sunny wi-flip-vertical"></i>
     <div id="app"></div>
 
     <script src="vendor.js"></script>
