Adding historyApiFallback to browser sync

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css">
 </head>
 <body>
-    <i class="wi wi-day-sunny wi-flip-vertical"></i>
     <div id="app"></div>
 
-    <script src="vendor.js"></script>
-    <script src="index.js"></script>
+    <script src="/vendor.js"></script>
+    <script src="/index.js"></script>
 </body>
 </html>
